GUI Label bug fix + removed floating gap

--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -1,11 +1,3 @@
-.text {
-	-fx-text-fill: white;
-}
-
-.label {
-	-fx-text-fill: white;
-}
-
 .radiobutton {
 	-fx-text-fill: white;
 }
